# orderbook-aggregator

./: Cargo.toml  LICENSE  README.md
frontend/: index.js  package-lock.json  package.json
frontend/public/: index.html
src/: exchange.rs  main.rs  merger.rs  tests.rs
src/exchange/: binance.rs  bitstamp.rs
