[package]
name = "orderbook-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
approx = "0.5.1"
axum = { version = "0.6.3", features = ["ws"] }
async-stream = "0.3.5"
clap = {version = "4.3.21", features = ["derive"]}
futures-util = "0.3.28"
prost = "0.11.9"
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = {version = "0.1", features = ["sync"]}
tokio-tungstenite = {version = "0.20.0", features = ["rustls-tls-native-roots"]}
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
